# mold

./: .gitmodules  CMakeLists.txt
src/: main.cpp
